# skills-oefen-opdracht

./: CMakeLists.txt  readme.md
include/: app.hpp  console.hpp
include/controller/: csv.hpp  fetch.hpp
include/model/: date.hpp  set.hpp
src/: app.cpp  console.cpp  main.cpp
src/controller/: csv.cpp  fetch.cpp
src/model/: date.cpp  set.cpp
